--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
-    "zen-observable": "^0.8.15"
+    "zen-observable": "^0.8.15",
+    "expo-notifications": "~0.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
