--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,42 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "useUnknownInCatchVariables": false,
+    "jsx": "react-native",
+    "lib": [
+      "dom",
+      "esnext"
+    ],
+    "moduleResolution": "node",
+    "noEmit": true,
+    "skipLibCheck": true,
+    "resolveJsonModule": true,
+    "strict": true,
+    "baseUrl": ".",
+    "allowJs": true,
+    "paths": {
+      "@screens": [
+        "src/screens"
+      ],
+      "@components": [
+        "src/components"
+      ],
+      "@utils": [
+        "src/utils"
+      ],
+      "@contexts/*": [
+        "src/contexts/*"
+      ],
+      "@config/*": [
+        "src/config/*"
+      ],
+      "@assets/*": [
+        "src/assets/*"
+      ],
+      "@api": [
+        "src/API.ts"
+      ]
+    }
+  },
   "extends": "expo/tsconfig.base"
 }
